some work in banner

--- a/index.html
+++ b/index.html
@@ -10,14 +10,23 @@
 </head>
 
 <body>
-    <div class="we_provide">
-        <svg class="we_provide_header_wrapper" width="264" height="100" viewBox="0 0 264 100" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M14.8088 96.9707L2.60386 41.5881L260.94 3.25499L253.519 79.4044L14.8088 96.9707Z" stroke="white"
-                stroke-width="4.18086" />
-        </svg>
+    <div class="banner">
+        <header>
+            <div class="container">
+                <div class="logo">
+                    <div class="logo_img_wrapper_img"><img src="img/header/logo_background.png"></div>
+                    <div class="logo_img"><img src="img/header/logo.png" class="logo_img"></div>
+                </div>
+                <div class="links">
 
+                </div>
+                <div class="soc_net">
+
+                </div>
+            </div>
+        </header>
     </div>
+
     <script src="js/script.js"></script>
 </body>
 
