--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="banner">
+    <div class="rock_your_app">
         <header>
             <div class="container">
                 <div class="logo">
@@ -18,13 +18,39 @@
                     <div class="logo_img"><img src="img/header/logo.png" class="logo_img"></div>
                 </div>
                 <div class="links">
-
+                    <a href="#">SOURCES</a>
+                    <a href="#">CASES</a>
+                    <a href="#">BLOG</a>
+                    <a href="#">CONTACTS</a>
                 </div>
                 <div class="soc_net">
-
+                    <a href="#"><img src="img/header/nw/skype.svg"></a>
+                    <a href="#"><img src="img/header/nw/tg.svg"></a>
+                    <a href="#"><img src="img/header/nw/in.svg"></a>
+                    <a href="#"><img src="img/header/nw/isnt.svg"></a>
                 </div>
             </div>
         </header>
+        <div class="cloud">
+            <img src="img/rock_your_app/cloud.svg" alt="hand">
+            <div class="text">
+                <div class="h1_first_part">
+                    Rock your app
+                </div>
+                <div class="h1_second_part">
+                    with boost.app
+                </div>
+                <img class="h1_wrapper" src="img/rock_your_app/h1_wrapper.svg">
+            </div>
+            <div class="small_text">
+                At Boost.app, we specialize in performance marketing to help digital projects generate volumes and
+                additional revenue. Our expertise covers a wide range of categories and we utilize our market experience
+                to test multiple hypotheses and scale successful strategies. We are proficient in promoting mobile apps
+                and brands globally through leading ad platforms and social media channels, ensuring maximum reach to
+                targeted audiences.
+            </div>
+        </div>
+
     </div>
 
     <script src="js/script.js"></script>
