--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <div class="container">
                 <div class="logo">
                     <div class="logo_img_wrapper_img"><img src="img/header/logo_background.png"></div>
-                    <div class="logo_img"><img src="img/header/logo.png" class="logo_img"></div>
+                    <div class="logo_img"><img src="img/header/logo.png"></div>
+                    <div class="logo2_img"><img src="img/header/logo2.svg"></div>
                 </div>
                 <div class="links">
                     <a href="#">SOURCES</a>
@@ -32,7 +33,8 @@
             </div>
         </header>
         <div class="cloud">
-            <img src="img/rock_your_app/cloud.svg" alt="hand">
+            <div class="logo"><img src="img/header/logo.png"></div>
+            <img src="img/rock_your_app/cloud.svg">
             <div class="text">
                 <div class="h1_first_part">
                     Rock your app
@@ -50,9 +52,28 @@
                 targeted audiences.
             </div>
         </div>
-
+        <img src="img/rock_your_app/hand_with_phone.png" class="hand_with_phone">
     </div>
-
+    <div class="we_provide">
+        <div class="header">
+            <div class="header_element_wrapper">
+                <svg width="264" height="100" viewBox="0 0 264 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M14.8088 96.9707L2.60386 41.5881L260.94 3.25499L253.519 79.4044L14.8088 96.9707Z"
+                        stroke="white" stroke-width="4.18086" />
+                </svg>
+            </div>
+            <div class="header_element_wrapper_fill">
+                <img src="img/we_provide/header_element_wrapper_fill.svg">
+            </div>
+            <div class="header_element_wrapper_decor">
+                <img src="img/we_provide/header_element_wrapper_decor.svg">
+            </div>
+            <div class="header_element_wrapper_decor_2">
+                <img src="img/we_provide/header_element_wrapper_decor_2.png">
+            </div>
+            <p>WE PROVIDE</p>
+        </div>
+    </div>
     <script src="js/script.js"></script>
 </body>
 
