--- a/index.html
+++ b/index.html
@@ -73,6 +73,31 @@
             </div>
             <p>WE PROVIDE</p>
         </div>
+        <div class="navigation_wrapper">
+            <div class="navigation">
+                <div class="navigation_element">
+                    <span>
+                        Strategy
+                    </span>
+                    And Planning
+                    img
+                    <div class="navigation_element_decor">
+                        <svg width="84" height="14" viewBox="0 0 84 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M83.3272 9.14233L11.9619 4.65066" stroke="url(#paint0_linear_1180_16529)"
+                                stroke-width="3.06872" />
+                            <path d="M77.3277 12.0837L0.60741 10.2426" stroke="white" stroke-width="3.06872" />
+                            <defs>
+                                <linearGradient id="paint0_linear_1180_16529" x1="67.0415" y1="1.41222" x2="67.4159"
+                                    y2="7.88615" gradientUnits="userSpaceOnUse">
+                                    <stop stop-color="#FF9323" />
+                                    <stop offset="1" stop-color="#FFF02E" />
+                                </linearGradient>
+                            </defs>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="js/script.js"></script>
 </body>
