part of sources

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <!-- <div class="rock_your_app">
+    <div class="rock_your_app">
         <header>
             <div class="container">
                 <div class="logo">
@@ -53,7 +53,7 @@
             </div>
         </div>
         <img src="img/rock_your_app/hand_with_phone.png" class="hand_with_phone">
-    </div> -->
+    </div>
     <div class="we_provide">
         <div class="header">
             <div class="header_element_wrapper ">
@@ -181,21 +181,6 @@
                     </svg>
 
                 </div>
-                <!-- <div class="line">
-                    <svg width="841" height="368" viewBox="0 0 841 368" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M36 3C-42 143.391 15.8896 381.171 201.89 332.374C438.1 270.404 461.062 401.97 581.89 355.572C732.088 297.897 630.29 55.1888 838.29 109.986"
-                            stroke="url(#paint0_linear_1179_16219)" stroke-width="3.99988" stroke-linecap="square"
-                            stroke-dasharray="8 8" />
-                        <defs>
-                            <linearGradient id="paint0_linear_1179_16219" x1="904.316" y1="-6.99494" x2="-117.12"
-                                y2="-86.6481" gradientUnits="userSpaceOnUse">
-                                <stop stop-color="#FF8200" />
-                                <stop offset="1" stop-color="#FFF02E" />
-                            </linearGradient>
-                        </defs>
-                    </svg>
-                </div> -->
                 <div class="mouth">
                     <img src="img/we_provide/mouth.png">
                 </div>
@@ -268,6 +253,83 @@
                             fill="#FF9424" />
                     </svg>
 
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="sources_header">
+        <div class="header">
+            <div class="count">100+</div>
+            <div class="text_wrapper">
+                <img src="img/sources/header_text_wrapper.svg">
+            </div>
+            <div class="text_wrapper_background">
+                <img src="img/sources/header_text_wrapper_background.svg">
+            </div>
+            <div class="text">SOURCES</div>
+            <div class="like">
+                <img src="img/sources/like.svg">
+            </div>
+        </div>
+    </div>
+    <div class="sources_content">
+        <div class="content">
+            <div class="content_background element">
+                <img src="img/sources/contetn_background.png">
+            </div>
+            <div class="rocket element">
+                <img src="img/sources/rocket.png">
+            </div>
+            <div class="speaker element">
+                <img src="img/sources/speaker.png">
+            </div>
+            <div class="speaker_background element">
+                <img src="img/sources/speaker_background.svg">
+            </div>
+            <div class="soc_media element">
+                <div class="soc_media_background element">
+                    <img src="img/sources/soc_media/soc_media_background.svg">
+                </div>
+                <div class="soc_media_background_wrapper element">
+                    <img src="img/sources/soc_media/soc_media_background_wrapper.svg">
+                </div>
+                <div class="tt element">
+                    <img src="img/sources/soc_media/tt.svg">
+                </div>
+                <div class="fb element">
+                    <img src="img/sources/soc_media/fb.svg">
+                </div>
+                <div class="tw element">
+                    <img src="img/sources/soc_media/tw.svg">
+                </div>
+                <div class="fc element">
+                    <img src="img/sources/soc_media/fc.svg">
+                </div>
+                <div class="sc element">
+                    <img src="img/sources/soc_media/sc.svg">
+                </div>
+                <div class="lines element">
+                    <img src="img/sources/soc_media/lines.svg">
+                </div>
+                <div class="text element">
+                    <div class="small">
+                        SOCIAL
+                    </div>
+                    <div class="big">
+                        MEDIA
+                    </div>
+                </div>
+            </div>
+            <div class="mob_user element">
+                <div class="background element">
+                    <img src="img/sources/mob_user/background.svg">
+                </div>
+                <div class="background_wrapper element">
+                    <img src="img/sources/mob_user/background_wrapper.svg">
+                </div>
+                <div class="text element">
+                    MOBILE USER
+                    ACQUISITION
                 </div>
             </div>
         </div>
