--- a/index.html
+++ b/index.html
@@ -327,9 +327,68 @@
                 <div class="background_wrapper element">
                     <img src="img/sources/mob_user/background_wrapper.svg">
                 </div>
+                <div class="lines element">
+                    <img src="img/sources/mob_user/lines.svg">
+                </div>
                 <div class="text element">
                     MOBILE USER
                     ACQUISITION
+                </div>
+            </div>
+            <div class="retargeting element">
+                <div class="background element">
+                    <img src="img/sources/retargeting/background.svg">
+                </div>
+                <div class="background_wrapper element">
+                    <img src="img/sources/retargeting/background_wrapper.svg">
+                </div>
+                <div class="human element">
+                    <img src="img/sources/retargeting/human.svg">
+                </div>
+                <div class="lines element">
+                    <img src="img/sources/retargeting/lines.svg">
+                </div>
+                <div class="text element">
+                    USER
+                    RETARGETING
+                </div>
+            </div>
+            <div class="dsp element">
+                <div class="background element">
+                    <img src="img/sources/dsp/background.svg">
+                </div>
+                <div class="background_wrapper element">
+                    <img src="img/sources/dsp/background_wrapper.svg">
+                </div>
+                <div class="android element">
+                    <img src="img/sources/dsp/android.svg">
+                </div>
+                <div class="point element">
+                    <img src="img/sources/dsp/point.svg">
+                </div>
+                <div class="p18 element">
+                    <img src="img/sources/dsp/p18.svg">
+                </div>
+                <div class="left_corner element">
+                    <img src="img/sources/dsp/left_corner.svg">
+                </div>
+                <div class="right_corner element">
+                    <img src="img/sources/dsp/right_corner.svg">
+                </div>
+                <div class="lines element">
+                    <img src="img/sources/dsp/lines.svg">
+                </div>
+                <div class="text element">
+                    DSP
+                </div>
+
+            </div>
+            <div class="button element">
+                <div class="wrapper element">
+                    <img src="img/sources/button/wrapper.svg">
+                </div>
+                <div class="wrapper2 element">
+                    <img src="img/sources/button/wrapper2.svg">
                 </div>
             </div>
         </div>
