--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <p>WE PROVIDE</p>
         </div>
         <div class="navigation_wrapper">
-            <div class="navigation">
-                <div class="navigation_element active">
+            <div class="navigation" id="we_provide_navigation">
+                <div class="navigation_element active first">
                     <span>
                         User Acquisition
                     </span>
@@ -99,8 +99,7 @@
                         </svg>
                     </div>
                 </div>
-
-                <div class="navigation_element">
+                <div class="navigation_element second">
                     <span>
                         Strategy
                     </span>
@@ -124,8 +123,7 @@
                         </svg>
                     </div>
                 </div>
-
-                <div class="navigation_element">
+                <div class="navigation_element third">
                     <span>
                         Creatives
                     </span>
@@ -151,13 +149,23 @@
                 </div>
             </div>
         </div>
-        <div class="text">
+        <div class="text" id="we_provide_text">
             <div class="p">
-                <p>
+                <p id="we_provide_text_first" class="we_provide_text_element">
                     Among the most in-demand and successful methods for gaining new users is ina-app targeted
                     advertising.
                     We reach the goals we set by thorough data analysis, proper audience segmentation and media buying
                     automation based on our own predictive technologies.
+                </p>
+                <p id="we_provide_text_second" class="we_provide_text_element dnone">
+                    Meow meow meow. Meow meow? MEOW! Meow meow, meow meow meow meow. Meow..
+                    Meow meow meow. Meow meow? MEOW! Meow meow, meow meow meow meow. Meow..
+                    Meow meow meow. Meow meow? MEOW! Meow meow, meow meow meow meow. Meow..
+                </p>
+                <p id="we_provide_text_third" class="we_provide_text_element dnone">
+                    Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum
+                    dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.
+                    Lorem ipsum dolor sit amet.
                 </p>
             </div>
             <div class="text_wrapper">
@@ -387,9 +395,9 @@
                 <div class="wrapper element">
                     <img src="img/sources/button/wrapper.svg">
                 </div>
-                <div class="wrapper2 element">
+                <!-- <div class="wrapper2 element">
                     <img src="img/sources/button/wrapper2.svg">
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
