--- a/index.html
+++ b/index.html
@@ -267,17 +267,22 @@
     </div>
     <div class="sources_header">
         <div class="header">
-            <div class="count">100+</div>
             <div class="text_wrapper">
                 <img src="img/sources/header_text_wrapper.svg">
             </div>
             <div class="text_wrapper_background">
                 <img src="img/sources/header_text_wrapper_background.svg">
             </div>
-            <div class="text">SOURCES</div>
             <div class="like">
                 <img src="img/sources/like.svg">
             </div>
+            <div class="text element">
+                <div class="wrap">SOURCES</div>
+            </div>
+            <div class="count element">
+                <div class="wrap">100+ </div>
+            </div>
+
         </div>
     </div>
     <div class="sources_content">
@@ -395,12 +400,114 @@
                 <div class="wrapper element">
                     <img src="img/sources/button/wrapper.svg">
                 </div>
-                <!-- <div class="wrapper2 element">
-                    <img src="img/sources/button/wrapper2.svg">
-                </div> -->
+                <div class="wrapper_yellow element">
+                    <img src="img/sources/button/wrapper_yellow.svg">
+                </div>
+                <div class="text element">
+                    All sources
+                </div>
             </div>
         </div>
     </div>
+
+
+    <div class="vert_header">
+        <div class="header">
+            <div class="text_wrapper element">
+                <img src="img/vert/header_text_wrapper.svg">
+            </div>
+            <div class="text_wrapper_background element">
+                <img src="img/vert/header_text_wrapper_background.svg">
+            </div>
+            <div class="text element element">
+                <div class="wrap">VERTICALS</div>
+            </div>
+            <div class="count element element">
+                <div class="wrap">4</div>
+            </div>
+            <div class="header_text_wrapper_decor element">
+                <img src="img/vert/header_text_wrapper_decor.svg">
+            </div>
+        </div>
+    </div>
+
+    <div class="vert_content">
+        <div class="bg element">
+            <img src="img/vert/bg.png">
+        </div>
+        <div class="first element">
+            <div class="banner element">
+                <img src="img/vert/1.png">
+            </div>
+            <div class="wrap element">
+                <img src="img/vert/1wrap.svg">
+            </div>
+            <div class="decor element">
+                <img src="img/vert/1decor.png">
+            </div>
+            <div class="lines element">
+                <img src="img/vert/odd.svg">
+            </div>
+            <div class="text element">
+                <div class="wrap">
+                    I-GAMING
+                </div>
+            </div>
+        </div>
+        <div class="second element">
+            <div class="banner element">
+                <img src="img/vert/2.png">
+            </div>
+            <div class="wrap element">
+                <img src="img/vert/2wrap.svg">
+            </div>
+            <div class="lines element">
+                <img src="img/vert/even.svg">
+            </div>
+            <div class="text element">
+                <div class="wrap">
+                    FINTECH
+                </div>
+            </div>
+        </div>
+        <div class="third element">
+            <div class="banner element">
+                <img src="img/vert/3.png">
+            </div>
+            <div class="wrap element">
+                <img src="img/vert/3wrap.svg">
+            </div>
+            <div class="lines element">
+                <img src="img/vert/odd.svg">
+            </div>
+            <div class="text element">
+                <div class="wrap">
+                    E-COMMERCE
+                </div>
+            </div>
+        </div>
+        <div class="fourth element">
+            <div class="banner element">
+                <img src="img/vert/4.png">
+            </div>
+            <div class="wrap element">
+                <img src="img/vert/4wrap.svg">
+            </div>
+            <div class="decor element">
+                <img src="img/vert/4decor.png">
+            </div>
+            <div class="lines element">
+                <img src="img/vert/even.svg">
+            </div>
+            <div class="text element">
+                <div class="wrap">
+                    GAMES
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script src="js/script.js"></script>
 </body>
 
