some of partners

--- a/index.html
+++ b/index.html
@@ -428,6 +428,9 @@
             <div class="header_text_wrapper_decor element">
                 <img src="img/vert/header_text_wrapper_decor.svg">
             </div>
+            <div class="bomb element">
+                <img src="img/vert/bomb.png">
+            </div>
         </div>
     </div>
 
@@ -448,6 +451,10 @@
             <div class="lines element">
                 <img src="img/vert/odd.svg">
             </div>
+            <div class="corner element">
+                <img src="img/vert/1corner.svg">
+            </div>
+
             <div class="text element">
                 <div class="wrap">
                     I-GAMING
@@ -499,6 +506,9 @@
             <div class="lines element">
                 <img src="img/vert/even.svg">
             </div>
+            <div class="corner element">
+                <img src="img/vert/4corner.svg">
+            </div>
             <div class="text element">
                 <div class="wrap">
                     GAMES
@@ -506,6 +516,44 @@
             </div>
         </div>
     </div>
+
+    <div class="partners_header">
+        <div class="header">
+            <div class="text_wrapper element">
+                <img src="img/partners/header_text_wrapper.svg">
+            </div>
+            <div class="text_wrapper_background element">
+                <img src="img/partners/header_text_wrapper_background.svg">
+            </div>
+            <div class="text element element">
+                <div class="wrap">PARTNERS</div>
+            </div>
+            <div class="count element element">
+                <div class="wrap">50+</div>
+            </div>
+            <div class="header_text_wrapper_decor element">
+                <img src="img/partners/header_text_wrapper_decor.png">
+            </div>
+            <div class="bomb element">
+                <img src="img/partners/bomb.png">
+            </div>
+        </div>
+    </div>
+
+    <div class="partners_content">
+        <div class="partner_row">
+            <div class="partner_row_inner">
+                <div class="partner_element">
+                    <div class="partner_logo">
+                        <img src="img/partners/partners_list/1.png">
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 
     <script src="js/script.js"></script>
