--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="rock_your_app">
+    <!-- <div class="rock_your_app">
         <header>
             <div class="container">
                 <div class="logo">
@@ -284,7 +284,7 @@
             </div>
 
         </div>
-    </div>
+    </div> 
     <div class="sources_content">
         <div class="content">
             <div class="content_background element">
@@ -515,7 +515,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 
     <div class="partners_header">
         <div class="header">
@@ -544,10 +544,233 @@
         <div class="partner_row">
             <div class="partner_row_inner">
                 <div class="partner_element">
-                    <div class="partner_logo">
+                    <div class="wrapper_first_style_1 element">
+                        <img src="img/partners/wrapper_first_style_1.svg">
+                    </div>
+                    <div class="wrapper_first_style_2 element">
+                        <img src="img/partners/wrapper_first_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
                         <img src="img/partners/partners_list/1.png">
                     </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            Exness
+                        </div>
+                    </div>
+                </div>
+                <div class="partner_element">
+                    <div class="wrapper_second_style_1 element">
+                        <img src="img/partners/wrapper_second_style_1.svg">
+                    </div>
+                    <div class="wrapper_second_style_2 element">
+                        <img src="img/partners/wrapper_second_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/2.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            Xm
+                        </div>
+                    </div>
+                </div>
+                <div class="partner_element">
+                    <div class="wrapper_first_style_1 element">
+                        <img src="img/partners/wrapper_first_style_1.svg">
+                    </div>
+                    <div class="wrapper_first_style_2 element">
+                        <img src="img/partners/wrapper_first_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/3.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            OctaFx
+                        </div>
+                    </div>
+                </div>
+                <div class="partner_element">
+                    <div class="wrapper_first_style_1 element">
+                        <img src="img/partners/wrapper_first_style_1.svg">
+                    </div>
+                    <div class="wrapper_first_style_2 element">
+                        <img src="img/partners/wrapper_first_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/4.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            PlayMillion
+                        </div>
+                    </div>
+                </div>
+                <div class="partner_element">
+                    <div class="wrapper_second_style_1 element">
+                        <img src="img/partners/wrapper_second_style_1.svg">
+                    </div>
+                    <div class="wrapper_second_style_2 element">
+                        <img src="img/partners/wrapper_second_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/5.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            M-Bet
+                        </div>
+                    </div>
+                </div>
+                <div class="partner_element">
+                    <div class="wrapper_first_style_1 element">
+                        <img src="img/partners/wrapper_first_style_1.svg">
+                    </div>
+                    <div class="wrapper_first_style_2 element">
+                        <img src="img/partners/wrapper_first_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/6.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            Parimatch
+                        </div>
+                    </div>
+                </div>
+                <div class="partner_element">
+                    <div class="wrapper_second_style_1 element">
+                        <img src="img/partners/wrapper_second_style_1.svg">
+                    </div>
+                    <div class="wrapper_second_style_2 element">
+                        <img src="img/partners/wrapper_second_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/7.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            Okx
+                        </div>
+                    </div>
+                </div>
+                <div class="partner_element">
+                    <div class="wrapper_first_style_1 element">
+                        <img src="img/partners/wrapper_first_style_1.svg">
+                    </div>
+                    <div class="wrapper_first_style_2 element">
+                        <img src="img/partners/wrapper_first_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/8.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            Betvictor
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="partner_row">
+            <div class="partner_row_inner">
+                <div class="partner_element">
+                    <div class="wrapper_first_style_1 element">
+                        <img src="img/partners/wrapper_first_style_1.svg">
+                    </div>
+                    <div class="wrapper_first_style_2 element">
+                        <img src="img/partners/wrapper_first_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/9.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            Ivy affiliates
+                        </div>
+                    </div>
+                </div>
+                <div class="partner_element">
+                    <div class="wrapper_second_style_1 element">
+                        <img src="img/partners/wrapper_second_style_1.svg">
+                    </div>
+                    <div class="wrapper_second_style_2 element">
+                        <img src="img/partners/wrapper_second_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/10.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            Bet and play
+                        </div>
+                    </div>
+                </div>
 
+                <div class="partner_element">
+                    <div class="wrapper_second_style_1 element">
+                        <img src="img/partners/wrapper_second_style_1.svg">
+                    </div>
+                    <div class="wrapper_second_style_2 element">
+                        <img src="img/partners/wrapper_second_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/11.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            Clubhouse
+                        </div>
+                    </div>
+                </div>
+                <div class="partner_element">
+                    <div class="wrapper_second_style_1 element">
+                        <img src="img/partners/wrapper_second_style_1.svg">
+                    </div>
+                    <div class="wrapper_second_style_2 element">
+                        <img src="img/partners/wrapper_second_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/12.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            7 Stars
+                        </div>
+                    </div>
+                </div>
+                <div class="partner_element">
+                    <div class="wrapper_second_style_1 element">
+                        <img src="img/partners/wrapper_second_style_1.svg">
+                    </div>
+                    <div class="wrapper_second_style_2 element">
+                        <img src="img/partners/wrapper_second_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/13.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            HF Markets
+                        </div>
+                    </div>
+                </div>
+                <div class="partner_element">
+                    <div class="wrapper_second_style_1 element">
+                        <img src="img/partners/wrapper_second_style_1.svg">
+                    </div>
+                    <div class="wrapper_second_style_2 element">
+                        <img src="img/partners/wrapper_second_style_2.svg">
+                    </div>
+                    <div class="partner_logo element">
+                        <img src="img/partners/partners_list/14.png">
+                    </div>
+                    <div class="text_wrapper element">
+                        <div class="text">
+                            BDSwiss
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
